kubernetes/apps/base/flux-system/flux-instance/extras/httproute.yaml
# Used to enable webhook-receivers https://toolkit.fluxcd.io/guides/webhook-receivers/
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: receiver
  annotations:
    external-dns.alpha.kubernetes.io/external: 'true'
    external-dns.kubernetes.io/external: 'true'
spec:
  parentRefs:
    - name: envoy-external
      namespace: network-system
      sectionName: https
    - name: envoy-internal
      namespace: network-system
      sectionName: https
  hostnames:
    - 'receiver.${CLUSTER_DOMAIN}'
  rules:
    - backendRefs:
        - name: webhook-receiver
          port: 80
          weight: 100
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flux
  annotations:
    external-dns.alpha.kubernetes.io/external: 'true'
    external-dns.kubernetes.io/external: 'true'
spec:
  parentRefs:
    - name: envoy-external
      namespace: network-system
      sectionName: https
    - name: envoy-internal
      namespace: network-system
      sectionName: https
  hostnames:
    - 'flux.${CLUSTER_DOMAIN}'
  rules:
    - backendRefs:
        - name: flux-operator
          port: 9080
          weight: 100
